[gd_scene load_steps=7 format=3 uid="uid://chipoq6s3ro70"]

[ext_resource type="Script" path="res://scenes/fighting/Enemy.gd" id="1_pcg65"]
[ext_resource type="Texture2D" uid="uid://bh3lblitpd717" path="res://assets/fighters/enemy_4.png" id="2_16jsj"]
[ext_resource type="PackedScene" uid="uid://b1dgls6g37b4f" path="res://effects/flame_damage.tscn" id="3_wv3yh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d4crl"]
size = Vector2(64, 64)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lfq1m"]
bg_color = Color(0.666667, 0, 0, 0.588235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gpdkt"]
bg_color = Color(0, 0.784314, 0, 0.588235)

[node name="Enemy" type="Area2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_pcg65")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_16jsj")

[node name="MoveRay" type="RayCast2D" parent="."]
target_position = Vector2(-96, 0)
collision_mask = 25
collide_with_areas = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_d4crl")

[node name="MeleeRay" type="RayCast2D" parent="."]
collide_with_areas = true

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -30.0
offset_top = -24.0
offset_right = 30.0
offset_bottom = -20.0
theme_override_styles/background = SubResource("StyleBoxFlat_lfq1m")
theme_override_styles/fill = SubResource("StyleBoxFlat_gpdkt")
show_percentage = false

[node name="FlameDamage" parent="." instance=ExtResource("3_wv3yh")]
visible = false
position = Vector2(-6, -10)
scale = Vector2(2.899, 3)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
